Add minimumCost field to illConfig
